# ddf-rs

./: .gitignore  Cargo.toml  Makefile  bard.json  chatgpt.json  ddf.json
.github/: CICD.yml
.github/workflows/: pipeline yaml  pipeline yml  pipeline.yml  release.yml
src/: command.rs  main.rs  question.rs  stat.rs  to_db.rs
